# slack-rs

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  KEYRING_FIX.md  LICENSE  Makefile  README.md  SlackSearchCLI_Rust_Spec.md  app_manifest.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  slack-rs-issue-investigation.md  style_conventions.md  suggested_commands.md
.wt/: setup
docs/: SlackCLI_AuthExportImport_Spec.md  SlackSearchCLI_Rust_Spec.md  basic-design.md  commands.md  config-and-storage.md  oauth.md  recipes.md  security.md
openspec/changes/2026-02-07-broaden-conv-default-fetch/: design.md  proposal.md  tasks.md
openspec/changes/2026-02-07-harden-file-download-ux/: design.md  proposal.md  tasks.md
openspec/changes/add-auth-export-import/: proposal.md  tasks.md
openspec/changes/add-auth-import-dry-run/: proposal.md  tasks.md
openspec/changes/add-auth-import-machine-readable-reporting/: design.md  tasks.md
openspec/changes/add-auth-status-default-token-type-tests/: design.md  tasks.md
openspec/changes/add-cli-introspection/: proposal.md  tasks.md
openspec/changes/add-conv-list-format-sort/: design.md  tasks.md
openspec/changes/add-conv-search-and-help/: proposal.md  tasks.md
openspec/changes/add-conversation-discovery/: design.md  tasks.md
openspec/changes/add-doctor-diagnostics-command/: tasks.md
openspec/changes/add-external-file-upload/: proposal.md  tasks.md
openspec/changes/add-file-download-command/: design.md  proposal.md  tasks.md
openspec/changes/add-file-download-regression-coverage/: proposal.md  tasks.md
openspec/changes/add-generic-api-call/: design.md  proposal.md  tasks.md
openspec/changes/add-guidance-output-tests/: tasks.md
openspec/changes/add-mention-resolution-cache/: proposal.md  tasks.md
openspec/changes/add-msg-reply-broadcast/: proposal.md  tasks.md
openspec/changes/add-ngrok-auth-login/: proposal.md  tasks.md
openspec/changes/add-oauth-auth-flow/: design.md  tasks.md
openspec/changes/add-oauth-config-fallbacks/: proposal.md  tasks.md
openspec/changes/add-oauth-config-management/: proposal.md  tasks.md
openspec/changes/use-lib-in-bin/: tasks.md  (+1 more)
skills/: .gitignore
skills/slack-rs/: README.md  SKILL.md
src/: debug.rs  lib.rs  main.rs
src/api/: args.rs  call.rs  client.rs  envelope.rs  guidance.rs  mod.rs  types.rs
src/auth/: clipboard.rs  cloudflared.rs  commands.rs  crypto.rs  export_import.rs  format.rs  i18n.rs  manifest.rs  mod.rs  ngrok.rs
src/cli/: context.rs  handlers.rs  help.rs  introspection.rs  mod.rs
src/commands/: config.rs  conv.rs  doctor.rs  file.rs  guards.rs  mod.rs  msg.rs  react.rs  search.rs  thread.rs  users.rs  users_cache.rs
src/idempotency/: handler.rs  mod.rs  store.rs  types.rs
src/oauth/: mod.rs  pkce.rs  port.rs  scopes.rs  server.rs  types.rs
src/profile/: mod.rs  resolver.rs  storage.rs  token_store.rs  token_type.rs  types.rs
src/skills/: mod.rs
tests/: api_integration_tests.rs  auth_integration.rs  commands_integration.rs  doctor_integration_tests.rs  export_import_integration.rs  file_download_integration.rs  manifest_generation_integration.rs  non_interactive_integration.rs  oauth_integration.rs  output_envelope_tests.rs  scope_preset_integration.rs  skill_installation_integration.rs  slack_token_env_tests.rs  thread_integration_tests.rs
tumf-app/: manifest.json  package.json
(+427 files in other folders)
