[package]
name = "slack-rs"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "slack-rs"
path = "src/main.rs"

[lib]
name = "slack_rs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
directories = "5.0"
keyring = "3.6"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
argon2 = "0.5"
aes-gcm = "0.10"
rpassword = "7.3"
regex = "1.11"

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"
httpmock = "0.8"
serial_test = "3.0"
