[package]
name = "slack-rs"
version = "0.1.52"
edition = "2021"
default-run = "slack-rs"
authors = ["tumf <tumf@users.noreply.github.com>"]
description = "A Slack CLI tool with OAuth authentication, profile management, and API access"
license = "MIT"
repository = "https://github.com/tumf/slack-rs"
homepage = "https://github.com/tumf/slack-rs"
documentation = "https://docs.rs/slack-rs"
readme = "README.md"
keywords = ["slack", "cli", "oauth", "api", "workspace"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "slack-rs"
path = "src/main.rs"

[lib]
name = "slack_rs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
directories = "5.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
argon2 = "0.5"
aes-gcm = "0.10"
rpassword = "7.3"
regex = "1.11"
arboard = "3.4"

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"
httpmock = "0.8"
serial_test = "3.0"

[package.metadata.release]
# Publish to crates.io (disabled by default - use manual publish)
publish = false
# Create and push git tag
tag = true
# Push changes to remote
push = true
# Sign git tags with GPG
sign-tag = false
# Pre-release commit message
pre-release-commit-message = "chore: release {{version}}"
# Enable/disable pre-release checks
verify = true
